--- a/Reseau_Social/templates/form-register.html
+++ b/Reseau_Social/templates/form-register.html
@@ -1,5 +1,4 @@
-{% load static %}
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link href="assets/images/favicon.png" rel="icon" type="image/png">
+    <link href="{% static 'assets/images/favicon.png' %}" rel="icon" type="image/png">
 
     <!-- title and description-->
     <title>Socialite</title>
     <meta name="description" content="Socialite - Social sharing network HTML Template">
    
     <!-- css files -->
-    <link rel="stylesheet" href="assets/css/tailwind.css">
-    <link rel="stylesheet" href="assets/css/style.css">  
+    <link rel="stylesheet" href="{% static 'assets/css/tailwind.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">  
     
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -30,18 +29,18 @@
       <div class="w-full lg:max-w-sm mx-auto space-y-10" uk-scrollspy="target: > *; cls: uk-animation-scale-up; delay: 100 ;repeat: true">
 
         <!-- logo image-->
-        <a href="#"> <img src="assets/images/logo.png" class="w-28 absolute top-10 left-10 dark:hidden" alt=""></a>
-        <a href="#"> <img src="assets/images/logo-light.png" class="w-28 absolute top-10 left-10 hidden dark:!block" alt=""></a>
+        <a href="#"> <img src="{% static 'assets/images/logo.png' %}" class="w-28 absolute top-10 left-10 dark:hidden" alt=""></a>
+        <a href="#"> <img src="{% static 'assets/images/logo-light.png' %}" class="w-28 absolute top-10 left-10 hidden dark:!block" alt=""></a>
 
         <!-- logo icon optional -->
         <div class="hidden">
-          <img class="w-12" src="assets/images/logo-icon.png" alt="Socialite html template">
+          <img class="w-12" src="{% static 'assets/images/logo-icon.png' %}" alt="Socialite html template">
         </div>
 
         <!-- title -->
         <div>
           <h2 class="text-2xl font-semibold mb-1.5"> Sign up to get started </h2>
-          <p class="text-sm text-gray-700 font-normal">If you already have an account, <a href="form-login.html" class="text-blue-700">Login here!</a></p>
+          <p class="text-sm text-gray-700 font-normal">If you already have an account, <a href= "{% url 'connexion' %}" class="text-blue-700">Login here!</a></p>
         </div>
  
 
@@ -135,10 +134,10 @@
     
         <ul class="uk-slideshow-items w-full h-full"> 
             <li class="w-full">
-                <img src="assets/images/post/img-3.jpg"  alt="" class="w-full h-full object-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
+                <img src="{% static 'assets/images/post/img-3.jpg' %}"  alt="" class="w-full h-full object-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
                 <div class="absolute bottom-0 w-full uk-tr ansition-slide-bottom-small z-10">
                     <div class="max-w-xl w-full mx-auto pb-32 px-5 z-30 relative"  uk-scrollspy="target: > *; cls: uk-animation-scale-up; delay: 100 ;repeat: true" > 
-                        <img class="w-12" src="assets/images/logo-icon.png" alt="Socialite html template">
+                        <img class="w-12" src="{% static 'assets/images/logo-icon.png' %}" alt="Socialite html template">
                         <h4 class="!text-white text-2xl font-semibold mt-7"  uk-slideshow-parallax="y: 600,0,0">  Connect With Friends </h4> 
                         <p class="!text-white text-lg mt-7 leading-8"  uk-slideshow-parallax="y: 800,0,0;"> This phrase is more casual and playful. It suggests that you are keeping your friends updated on what’s happening in your life.</p>   
                     </div> 
@@ -146,10 +145,10 @@
                 <div class="w-full h-96 bg-gradient-to-t from-black absolute bottom-0 left-0"></div>
             </li>
             <li class="w-full">
-              <img src="assets/images/post/img-2.jpg"  alt="" class="w-full h-full object-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
+              <img src="{% static 'assets/images/post/img-2.jpg' %}"  alt="" class="w-full h-full object-cover uk-animation-kenburns uk-animation-reverse uk-transform-origin-center-left">
               <div class="absolute bottom-0 w-full uk-tr ansition-slide-bottom-small z-10">
                   <div class="max-w-xl w-full mx-auto pb-32 px-5 z-30 relative"  uk-scrollspy="target: > *; cls: uk-animation-scale-up; delay: 100 ;repeat: true" > 
-                      <img class="w-12" src="assets/images/logo-icon.png" alt="Socialite html template">
+                      <img class="w-12" src="{% static 'assets/images/logo-icon.png' %}" alt="Socialite html template">
                       <h4 class="!text-white text-2xl font-semibold mt-7"  uk-slideshow-parallax="y: 800,0,0">  Connect With Friends </h4> 
                       <p class="!text-white text-lg mt-7 leading-8"  uk-slideshow-parallax="y: 800,0,0;"> This phrase is more casual and playful. It suggests that you are keeping your friends updated on what’s happening in your life.</p>   
                   </div> 
@@ -173,12 +172,12 @@
   
    
     <!-- Uikit js you can use cdn  https://getuikit.com/docs/installation  or fine the latest  https://getuikit.com/docs/installation -->
-    <script src="assets/js/uikit.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="{% static 'assets/js/uikit.min.js' %}"></script>
+    <script src="{% static 'assets/js/script.js' %}"></script>
 
     <!-- Ion icon -->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js' %}"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js' %}"></script>
 
       <!-- Dark mode -->
       <script>
