--- a/Reseau_Social/templates/feed.html
+++ b/Reseau_Social/templates/feed.html
@@ -544,7 +544,7 @@
                                 </a>
                             </li> 
                             <li>
-                                <a href="video.html">
+                                <a href="{% url 'Video' %}">
                                     <img src="{% static 'assets/images/icons/video.png' %}" alt="messages" class="w-6">
                                     <span> video </span> 
                                 </a>
