--- a/Reseau_Social/templates/feed.html
+++ b/Reseau_Social/templates/feed.html
@@ -550,7 +550,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="event.html">
+                                <a href="{% url 'Evenement' %}">
                                     <img src="{% static 'assets/images/icons/event.png' %}" alt="messages" class="w-6">
                                     <span> event </span> 
                                 </a>
